correcao erro LocalDate e recursao no produto em categoria