@@ -1,15 +1,17 @@
 package br.gov.serratec.grupo05api.service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import br.gov.serratec.grupo05api.dto.CategoriaDto;
+import br.gov.serratec.grupo05api.dto.ProdutoCategoriaDto;
 import br.gov.serratec.grupo05api.dto.ProdutoDto;
+import br.gov.serratec.grupo05api.model.Categoria;
 import br.gov.serratec.grupo05api.model.Produto;
+import br.gov.serratec.grupo05api.repository.CategoriaRepository;
 import br.gov.serratec.grupo05api.repository.ProdutoRepository;
 
 @Service
@@ -17,43 +19,39 @@ public class ProdutoService {
 	
 	@Autowired
     private ProdutoRepository produtoRepository;
+	
+	@Autowired
+    private CategoriaRepository categoriaRepository;
 
 	public List<ProdutoDto> obterTodos() {
         List<Produto> produtos = produtoRepository.findAll();
-        List<ProdutoDto> produtoDtos = new ArrayList<>();
-        for (Produto produto : produtos) {
-            ProdutoDto produtoDto = new ProdutoDto(
-                    produto.getId(),
-                    produto.getNome(),
-                    produto.getDescricao(),
-                    produto.getQtdEstoque(),
-                    produto.getDataCadastro(),
-                    produto.getValorUnitario(),
-                    produto.getImagem(),
-                    CategoriaDto.toDto(produto.getCategoria())
-            );
-            produtoDtos.add(produtoDto);
-        }
-        return produtoDtos;
+        return produtos.stream().map(p -> ProdutoDto.toDto(p)).toList();
     }
 
-    public ProdutoDto cadastrarProduto(ProdutoDto produtoDto) {
-        Produto produto = produtoDto.toEntity();
+    public ProdutoDto cadastrarProduto(ProdutoCategoriaDto produtoCategoriaDto) {
+    	Categoria categoria = categoriaRepository.findById(produtoCategoriaDto.categoriaId())
+                .orElseThrow(() -> new IllegalArgumentException("Categoria não encontrada"));
+
+        Produto produto = produtoCategoriaDto.toEntity(categoria);
         Produto novoProduto = produtoRepository.save(produto);
         return ProdutoDto.toDto(novoProduto);
     }
     
-    public ProdutoDto atualizarProduto(Long id, ProdutoDto produtoDto) {
+    public ProdutoDto atualizarProduto(Long id, ProdutoCategoriaDto produtoCategoriaDto) {
         Optional<Produto> produtoExistente = produtoRepository.findById(id);
         if (produtoExistente.isPresent()) {
             Produto produto = produtoExistente.get();
-            produto.setNome(produtoDto.nome());
-            produto.setDescricao(produtoDto.descricao());
-            produto.setQtdEstoque(produtoDto.qtdEstoque());
-            produto.setDataCadastro(produtoDto.dataCadastro());
-            produto.setValorUnitario(produtoDto.valorUnitario());
-            produto.setImagem(produtoDto.imagem());
-            produto.setCategoria(produtoDto.categoria().toEntity());
+            produto.setNome(produtoCategoriaDto.nome());
+            produto.setDescricao(produtoCategoriaDto.descricao());
+            produto.setQtdEstoque(produtoCategoriaDto.qtdEstoque());
+            produto.setDataCadastro(produtoCategoriaDto.dataCadastro());
+            produto.setValorUnitario(produtoCategoriaDto.valorUnitario());
+            produto.setImagem(produtoCategoriaDto.imagem());
+            
+            Categoria categoria = categoriaRepository.findById(produtoCategoriaDto.categoriaId())
+                    .orElseThrow(() -> new IllegalArgumentException("Categoria não encontrada"));
+            produto.setCategoria(categoria);
+
             Produto produtoAtualizado = produtoRepository.save(produto);
             return ProdutoDto.toDto(produtoAtualizado);
         } else {
@@ -78,14 +76,7 @@ public class ProdutoService {
     public List<ProdutoDto> buscarPorNomeProduto(String nome) {
         List<Produto> produtos = produtoRepository.findByNomeContainingIgnoreCase(nome);
         return produtos.stream()
-                       .map(produtoEntity -> new ProdutoDto(
-                                produtoEntity.getId(),
-                                produtoEntity.getNome(),
-                                produtoEntity.getDescricao(),
-                                produtoEntity.getQtdEstoque(),
-                                produtoEntity.getDataCadastro(),
-                                produtoEntity.getValorUnitario(),
-                                produtoEntity.getImagem(),
-                                CategoriaDto.toDto(produtoEntity.getCategoria()))).toList();
+                .map(ProdutoDto::toDto)
+                .collect(Collectors.toList());
     }
 }
